# SoftRenderer

./: .gitignore  ReadMe.md
Ado/: .project  settings.gradle
Ado/app/: .project  build.gradle
Ado/app/src/main/: AndroidManifest.xml
Ado/gradle/wrapper/: gradle-wrapper.properties
Mac/: CMakeLists.txt  Main.cpp  OutputPic.ppm  ScreenDevice.h  build_macos.sh
Unity/: .gitignore  Assembly-CSharp.csproj  Unity.sln
Unity/Assets/: MainCode.cs
Unity/Assets/Main/: MainScene.unity
Unity/ProjectSettings/: AudioManager.asset  ClusterInputManager.asset  DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  InputManager.asset  NavMeshAreas.asset  NetworkManager.asset  Physics2DSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset  TimeManager.asset
Unreal/: .gitignore  Graphic.sln  Graphic.uproject
Unreal/Config/: DefaultEngine.ini  DefaultGame.ini
Unreal/Content/SoftRenderPipleLine/: MainUI.uasset  MainUILevel.umap  MainUIRT.uasset  MainUITest.uasset
Unreal/Source/: Graphic.Target.cs  GraphicEditor.Target.cs
Unreal/Source/Graphic/: Graphic.Build.cs  Graphic.cpp
Unreal/Source/Graphic/SoftRenderer/: MainUICpp.cpp  MainUICpp.h  ScreenDevice.h
Win/: CMakeLists.txt  Main.cpp  build_windows.bat  generate_sln.bat
iOS/SoftRenderer/SoftRenderer/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  SoftRenderer.cpp  SoftRenderer.h  SoftRenderer.m  ViewController.h  ViewController.m  ViewController.mm  main.m
iOS/SoftRenderer/SoftRenderer.xcodeproj/: project.pbxproj
(+12 files in other folders)
